# CleanCodeAI

./: .gitignore  README.md
backend/: db.postgresql  db.sqlite3  mermaid.diagram  pyproject.toml
backend/system_ai/: apps.py  models.py
backend/system_app/: enums.py  models.py  service.py
backend/system_app/api/: login_api.py
backend/system_app/graphql/: model_types.py  mutation.py  query.py
backend/system_app/graphql/mutations/: mutate_login.py
backend/system_app/migrations/: 0001_initial.py  0004_alter_user_email.py
backend/system_app/utils/: __init__.py  functions.py  response_registry.py
backend/web/: settings.py
backend/web_backend/: asgi.py  middleware.py  schema.py  settings.py  urls.py  wsgi.py
backend/web_backend/system_app/: apps.py  enums.py  models.py  schema.py  service.py
backend/web_backend/system_app/api/: login_api.py
backend/web_backend/system_app/graphql/: base_mutation.py  model_types.py  mutation.py  query.py  types.py
backend/web_backend/system_app/migrations/: 0002_profile_userprofile.py  0003_alter_userprofile_profile_id_and_more.py
backend/webconfig/: asgi.py  settings.py  urls.py  wsgi.py
backend/webproject/webapp/: models.py
backend/webproject/webproject/: settings.py
cleancodeai_backend/: pyproject.toml
cleancodeai_backend/config/: middleware.py  routers.py  schema.py  settings.py  urls.py
cleancodeai_frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
cleancodeai_frontend/app/: apollo.ts  app.css  entry.server.tsx  root.tsx  routes.ts
frontend/: package.json
frontend/app/: app.css  (+5 more)
(+60 files in other folders)
